--- a/BumpMapping.vcproj
+++ b/BumpMapping.vcproj
@@ -198,7 +198,7 @@
 				>
 			</File>
 			<File
-				RelativePath=".\Shader.cpp"
+				RelativePath=".\shaders.cpp"
 				>
 			</File>
 			<File
@@ -256,7 +256,7 @@
 				>
 			</File>
 			<File
-				RelativePath=".\Shader.h"
+				RelativePath=".\shaders.h"
 				>
 			</File>
 			<File
