Added texture. Still there is a bug with poles

--- a/BumpMapping.vcproj
+++ b/BumpMapping.vcproj
@@ -206,6 +206,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\Texture.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\Vertex.cpp"
 				>
 			</File>
@@ -264,6 +268,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\Texture.h"
+				>
+			</File>
+			<File
 				RelativePath=".\Vertex.h"
 				>
 			</File>
@@ -277,6 +285,10 @@
 			Filter="rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav"
 			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}"
 			>
+			<File
+				RelativePath=".\brickdiff.tga"
+				>
+			</File>
 			<File
 				RelativePath=".\BumpMapping.rc"
 				>
@@ -299,6 +311,10 @@
 			</File>
 			<File
 				RelativePath=".\plane.vsh"
+				>
+			</File>
+			<File
+				RelativePath=".\sphere.psh"
 				>
 			</File>
 		</Filter>
