Parallax bump-mapping. Now plane and sphere has different shaders

--- a/BumpMapping.vcproj
+++ b/BumpMapping.vcproj
@@ -306,6 +306,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\plane.psh"
+				>
+			</File>
+			<File
 				RelativePath=".\plane.vsh"
 				>
 			</File>
